# toran

./: .dockerignore  .gitignore  BUILD_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  TOUR.md  deny.toml  pyproject.toml  toran.example.toml
.github/workflows/: ci.yml  publish.yml
assets/: dashboard.css  dashboard.js
benches/: policy_eval.rs
policies/: allow-all.yaml  database-guardian.yaml  email-guardian.yaml  financial-guardian.yaml  minimal.yaml
scripts/: set-permissions.sh
sdk/examples/: custom_framework.py  langchain_example.py  minimal.py
sdk/tests/: test_gate.py
sdk/toran/: __init__.py  client.py  config.py  core.py  exceptions.py  integrations.py
specs/: 00-VISION.md  01-ARCHITECTURE.md  02-TECH-STACK.md  03-FOLDER-STRUCTURE.md  04-PHASE-1-CORE.md  05-PHASE-2-SDK.md  06-PHASE-3-API.md  07-PHASE-4-DASHBOARD.md  08-PHASE-5-INTEGRATION.md  09-PHASE-6-LAUNCH.md  10-DEPLOYMENT.md  11-SECURITY.md  12-AI-PROMPTS.md  13-README-TEMPLATE.md  14-CONTRIBUTING.md
src/: cli.rs  config.rs  lib.rs  main.rs  metrics.rs  protocol.rs  security.rs  server.rs
src/api/: dashboard.rs  mod.rs  router.rs
src/notification/: console.rs  dispatcher.rs  mod.rs  slack.rs  webhook.rs
src/policy/: compiler.rs  evaluator.rs  loader.rs  mod.rs  schema.rs  validator.rs
src/state/: manager.rs  memory.rs  mod.rs  sqlite.rs
tests/: e2e.rs  policy_integration.rs  state_integration.rs
