[package]
name = "toran"
version = "0.1.0"
edition = "2024"
description = "Toran - Runtime human-approval gatekeeper for AI agents"
license = "MIT"
rust-version = "1.85"

[[bin]]
name = "toran"
path = "src/main.rs"

[lib]
name = "toran"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6.1"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
futures = "0.3"
bytes = "1.7"
async-trait = "0.1"
parking_lot = "0.12"
dirs = "5.0"
once_cell = "1.20"
walkdir = "2.5"
toml = "0.8"

[dev-dependencies]
tempfile = "3.13"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "policy_eval"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
